bevel loop slide failures #86768

Closed
opened 2021-03-20 19:04:02 +01:00 by MACHIN3 · 13 comments

System Information
Operating system: Linux-4.15.0-136-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: 2.90.1

Short description of error
Loop sliding with the bevel tool, in particular using percent bevels, will often fail, when edges are at more extreme angles.
loop_slide_fail.png

It can also happen for offset bevels, but in different conditions:
loop_slide_fail2.png

If there is some kind of internal angle threshold used internally, that determines if an edge is used for loop sliding or not, I'd like to see it exposed. Not just for bpy.ops.mesh.bevel but also (and for me more importantly) for bmesh.ops.bevel.

In 2.90.1 this behavior is not present or fails differently, with usually better results.

video demo:
https://www.youtube.com/watch?v=w8Y5m5NTtQQ

blend file:
bevel_loop_slide_failure.blend

edit: adding a second example, this time with the bevel mod

video demo:
https://www.youtube.com/watch?v=yEnnmwsl20w

blend file:
bevel_loop_slide_failure2.blend

Exact steps for others to reproduce the error

  • open the blend and bevel the edge loops in the 2 objects
  • alternate between offset and percent bevels and toggle loop slide on/off
**System Information** Operating system: Linux-4.15.0-136-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.39 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: 2.90.1 **Short description of error** Loop sliding with the bevel tool, in particular using percent bevels, will often fail, when edges are at more extreme angles. ![loop_slide_fail.png](https://archive.blender.org/developer/F9901345/loop_slide_fail.png) It can also happen for offset bevels, but in different conditions: ![loop_slide_fail2.png](https://archive.blender.org/developer/F9901347/loop_slide_fail2.png) If there is some kind of internal angle threshold used internally, that determines if an edge is used for loop sliding or not, I'd like to see it exposed. Not just for `bpy.ops.mesh.bevel` but also (and for me more importantly) for `bmesh.ops.bevel`. In 2.90.1 this behavior is not present or fails differently, with usually better results. video demo: https://www.youtube.com/watch?v=w8Y5m5NTtQQ blend file: [bevel_loop_slide_failure.blend](https://archive.blender.org/developer/F9901350/bevel_loop_slide_failure.blend) **edit:** adding a second example, this time with the bevel mod video demo: https://www.youtube.com/watch?v=yEnnmwsl20w blend file: [bevel_loop_slide_failure2.blend](https://archive.blender.org/developer/F9917825/bevel_loop_slide_failure2.blend) **Exact steps for others to reproduce the error** * open the blend and bevel the edge loops in the 2 objects * alternate between offset and percent bevels and toggle loop slide on/off
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

Added subscriber: @Teds

Added subscriber: @Teds

Confirmed in 2.92.0, Windows 10 64bit

Confirmed in 2.92.0, Windows 10 64bit
Author

Added subscriber: @howardt

Added subscriber: @howardt
Author

I've added a second example, this time using the bevel mod.

@howardt Not a 100% sure, but would this be yours to take on?

I've added a second example, this time using the bevel mod. @howardt Not a 100% sure, but would this be yours to take on?
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-04-07 05:32, hash: 2fbee4598c.

I can confirm this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-04-07 05:32, hash: `2fbee4598c`.
Member

There is an angle below which it won't slide along the edge. It is 0.25 radians = 14.3 degrees. The reason for this was, I think, that at that angle, you have to go about 4 times as much along the sliding edge as the width desired (for offset mode), and people complained about "spikes". This seems like a very technical thing to expose in the UI (control over that angle). But since one can turn loop slide off, maybe I should just use a much tinier angle instead of .25 radians. I will investigate whatever bugs caused me to put 0.25 in in the first place and then decide what to do.

There is an angle below which it won't slide along the edge. It is 0.25 radians = 14.3 degrees. The reason for this was, I think, that at that angle, you have to go about 4 times as much along the sliding edge as the width desired (for offset mode), and people complained about "spikes". This seems like a very technical thing to expose in the UI (control over that angle). But since one can turn loop slide off, maybe I should just use a much tinier angle instead of .25 radians. I will investigate whatever bugs caused me to put 0.25 in in the first place and then decide what to do.
Author

that at that angle, you have to go about 4 times as much along the sliding edge as the width desired

I would be fine with that, not matter the angle. If I want to loop slide along the edges I have placed, then I want to loop slide along them. Ideally, there would be an option to do this, so use loop slide without any cut off angle.

Beyond that, if you look at the first image, where at the right it isn't loop sliding, it still seems like the bevel amount is way too much, as it overshoots a lot. It's as if the amount is still gotten from the angled edge, despite it not beeing used for loop sliding.
It seems to be the same in the video of the bevel mod.

Whatever setting you expose to facilitate this, please make sure to do it in the bmesh bevel op as well. Thank you!

> that at that angle, you have to go about 4 times as much along the sliding edge as the width desired I would be fine with that, not matter the angle. If I want to loop slide along the edges I have placed, then I want to loop slide along them. Ideally, there would be an option to do this, so use loop slide without any cut off angle. Beyond that, if you look at the first image, where at the right it isn't loop sliding, it still seems like the bevel amount is way too much, as it overshoots a lot. It's as if the amount is still gotten from the angled edge, despite it not beeing used for loop sliding. It seems to be the same in the video of the bevel mod. Whatever setting you expose to facilitate this, please make sure to do it in the bmesh bevel op as well. Thank you!
Author

Just wanted to bump this, as I feel it's a major shortcoming of the bevel tool/mod right now. I hope this will be resolved in 3.0, but would prefer it much earlier.

Just wanted to bump this, as I feel it's a major shortcoming of the bevel tool/mod right now. I hope this will be resolved in 3.0, but would prefer it much earlier.

This issue was referenced by 4886ed2863

This issue was referenced by 4886ed28637cbda056980467934d9d7c4190b6e2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Howard Trickey self-assigned this 2021-07-25 21:15:08 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86768
No description provided.